style.css: fixed min height misalignment  caused by owl-stage class

--- a/classic_brownline_plumbing_services_website/src/assets/css/style.css
+++ b/classic_brownline_plumbing_services_website/src/assets/css/style.css
@@ -572,9 +572,11 @@ transform: translateY(-2px); /* small lift for life-like feel */
     margin-top: -15px;
 }
 
+.min-H-carousel {
+    min-height: 800px;
+}
 .owl-carousel .owl-stage {
     position: relative;
-    min-height: 800px;
     -ms-touch-action: pan-Y;
     -moz-backface-visibility: hidden;
     /* fix firefox animation glitch */
